--- a/it_modernization/events.yaml
+++ b/it_modernization/events.yaml
@@ -6,6 +6,16 @@ meta:
 
 events:
 
+- date: 2024-02-24
+  type: onboarded
+  onboard_type: appointed
+  event: Unidentified "Employee 4" is appointed as an unpaid volunteer "Expert" at SSA with a term not to exceed 2026-02-22
+  comment: Reports to be a founder, CEO and Chief Investment Officer and to have 25 years of experience in private equity
+  named_aliases:
+  - SSA-4
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
+
 - date: 2024-11-26
   type: report
   event: A person who is likely Anthony Jancso posted a message in an AI challenge's Discord saying "Helping the Dept. of Government Efficiency team find hardcore engineers. Send your GitHub/LinkedIn to @DOGE on X and your X handle to me in DM if you're interested or know someone who is, could help get them into the pipeline."
@@ -1350,6 +1360,23 @@ events:
   source: https://www.nytimes.com/2025/02/26/us/politics/elon-musk-doge-x-accounts-activists.html
   agency: VA
 
+- date: 2025-02-10
+  type: onboarded
+  onboard_type: appointed
+  event: Unidentified "Employee 1" is appointed as an Expert with a salary of $90,025 and a term not to exceed 2026-02-08
+  named_aliases:
+  - SSA-1
+  agency: SSA
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+
+- date: 2025-02-10
+  type: official
+  event: Unidentified "Employee 2" signs the SSA Rules of Behavior for access to SSA networks and systems
+  named_aliases:
+  - SSA-1
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
+
 - date: 2025-02-11
   type: promotion
   event: Greg Hogan is formally named the CIO of OPM
@@ -1452,10 +1479,12 @@ events:
   type: onboarded
   onboard_type: detailed
   detailed_from: OPM
+  comment: This one shows up for both OPM-3 and ED-1 in different releases
   event: An unusual Memorandum of Understanding is signed by Brian Bjelde for OPM and representatives of Social Security and the Department of Education for Akash Bobba to start working at SSA (but he already had been working there, according to Tiffany Flick's testimony)
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.51.1.pdf
-  named:
-  - Akash Bobba
+  named_aliases:
+  - OPM-3
+  - ED-1
   agency: SSA
 
 - date: 2025-02-12
@@ -1856,14 +1885,14 @@ events:
   type: onboarded
   onboard_type: detailed
   detailed_from: DOL
-  detail_id: 20250218-dol-ssa-employee-3
+  detail_id: 20250222-dol-ssa-employee-3
   named_aliases:
   - SSA-3
   event: According to a sworn declaration by a Deputy Commissioner at SSA, "we began onboarding and training Employee 3, a Schedule C Policy Advisor, detailed from the Department of Labor to SSA" with it finalized on February 22. "His duties currently relate to improper payments and SSA's Death Master File."
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   agency: SSA
   detail_info:
-    id: 20250218-dol-ssa-employee-3
+    id: 20250222-dol-ssa-employee-3
     from: DOL
     to: SSA
     signed_date: 2025-02-18
@@ -1875,7 +1904,7 @@ events:
     - SSA-3
     reimbursement_amount: $71,000 per quarter
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    file: 20250218-dol-ssa-employee-3.pdf
+    file: 20250222-dol-ssa-employee-3.pdf
 
 - date: 2025-02-18
   type: onboarded
@@ -1934,6 +1963,64 @@ events:
   event: Senate Democrats send letter to VA Secretary demanding information about DOGE's activities there
   source: https://fedscoop.com/veterans-affairs-data-doge-elon-musk/
   agency: VA
+
+- date: 2025-02-18
+  type: onboarded
+  onboard_type: detailed
+  event: Unidentified "Employee 3" signs the SSA Rules of Behavior for access to SSA networks and systems
+  detail_id: 20250222-dol-ssa-employee-3
+  named_aliases:
+  - SSA-3
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
+  detail_info:
+    id: 20250222-dol-ssa-employee-3
+    from: DOL
+    to: SSA
+    signed_date: 2025-02-18
+    start_date: 2025-02-18
+    end_date: 2026-02-18
+    max_people: 1
+    reimbursed: true
+    named_aliases:
+    - SSA-3
+    reimbursement_amount: $71,000 per quarter
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
+    file: 20250222-dol-ssa-employee-3.pdf
+
+- date: 2025-02-18
+  type: onboarded
+  onboard_type: detailed
+  event: Unidentified "Employee 2" signs the SSA Rules of Behavior for access to SSA networks and systems
+  detail_id: 20250306-nasa-ssa-employee-2
+  named_aliases:
+  - SSA-2
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
+  detail_info:
+    id: 20250306-nasa-ssa-employee-2
+    from: NASA
+    to: SSA
+    signed_date: 2025-03-06
+    start_date: 2025-02-18
+    end_date: 2026-02-18
+    max_people: 1
+    reimbursed: true
+    named_aliases:
+    - SSA-2
+    reimbursement_amount: Up to $120,579
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
+    file: 20250306-nasa-ssa-employee-2.pdf
+
+- date: 2025-02-18
+  type: onboarded
+  onboard_type: detailed
+  event: Unidentified "Employee 8" and "Employee 10" sign the SSA Rules of Behavior for access to SSA networks and systems
+  named_aliases:
+  - SSA-8
+  - SSA-10
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
 
 - date: 2025-02-19
   type: report
@@ -2324,6 +2411,26 @@ events:
   event: Sara Aviel is dismissed as the CEO of the IAF
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278118/gov.uscourts.dcd.278118.7.3.pdf
   agency: IAF
+
+- date: 2025-02-23
+  type: onboarded
+  onboard_type: appointed
+  event: Unidentified "Employee 9" is appointed as an volunteer Expert a term not to exceed 2026-02-26
+  comment: In their qualifications, thety list being a Senior Associate, Data Engineer with a backgroun in AI, Airflow and Genetic Algorithms. Also built a Manufacturing Execution System (MES) for home battery deployments
+  named_aliases:
+  - SSA-9
+  agency: SSA
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+
+- date: 2025-02-24
+  type: onboarded
+  onboard_type: appointed
+  event: Unidentified "Employee 6" is onboarded as an unpaid appointed Expert to the CIO with a term not to exceed 2026-02-22
+  comment: Lists background as a Growth Equity Vice President
+  named_aliases:
+  - SSA-6
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
 
 - date: 2025-02-24
   type: access_granted
@@ -3183,6 +3290,54 @@ events:
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278529/gov.uscourts.dcd.278529.1.2_1.pdf
   agency: USIP
 
+- date: 2025-03-05
+  type: onboarded
+  onboard_type: detailed
+  event: Unidentified "Employee 7" signs the SSA Rules of Behavior for access to SSA networks and systems
+  detail_id: 20250317-dol-ssa-employee-7
+  named_aliases:
+  - SSA-7
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
+  detail_info:
+    id: 20250317-dol-ssa-employee-7
+    from: DOL
+    to: SSA
+    signed_date: 2025-03-17
+    start_date: 2025-03-05
+    end_date: 2025-03-06
+    max_people: 1
+    named_aliases:
+    - SSA-7
+    reimbursed: true
+    reimbursement_amount: $71,000 per quarter
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
+    file: 20250317-dol-ssa-employee-7.pdf
+
+- date: 2025-03-05
+  type: onboarded
+  onboard_type: detailed
+  event: Unidentified "Employee 7" signs the SSA Rules of Behavior for access to SSA networks and systems
+  detail_id: 20250317-dol-ssa-employee-7
+  named_aliases:
+  - SSA-7
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
+  detail_info:
+    id: 20250317-dol-ssa-employee-7
+    from: DOL
+    to: SSA
+    signed_date: 2025-03-17
+    start_date: 2025-03-05
+    end_date: 2025-03-06
+    max_people: 1
+    named_aliases:
+    - SSA-7
+    reimbursed: true
+    reimbursement_amount: $71,000 per quarter
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
+    file: 20250317-dol-ssa-employee-7.pdf
+
 - date: 2025-03-06
   type: disruption
   event: The Engineering Director of USDS publicly resigns in protest, stating "this is not the mission I joined"
@@ -3598,6 +3753,16 @@ events:
   event: At 6pm, all Inter-Con staff are removed from the building, all keycard access is revoked and all physical keys accounted for except for one held by the Inter-Con account manager for USIP
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.278529/gov.uscourts.dcd.278529.2.2.pdf
   agency: USIP
+
+- date: 2025-03-16
+  type: onboarded
+  onboard_type: appointed
+  event: Unidentified "Employee 11" starts at SSA as an appointed Expert with a salary of $162,672 and a term not to exceed 2026-03-15
+  comment: Describes self as a Senior Software Engineer with over 10 years of experience in geospatial analysis
+  named_aliases:
+  - SSA-11
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
 
 - date: 2025-03-17
   type: onboarded
@@ -4185,6 +4350,14 @@ events:
   event: Postmaster General DeJoy resigns
   source: https://www.usatoday.com/story/news/nation/2025/03/30/postal-service-changes-doge-musk/82696231007/
   agency: USPS
+
+- date: 2025-03-25
+  type: promotion
+  named_aliases:
+  - SSA-2
+  event: Unidentified "Employee 2" at SSA submits a signed appointment affadavit for the position of Chief Information Officer
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+  agency: SSA
 
 - date: 2025-03-25
   type: disruption
